--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 // Place your settings in this file to overwrite default and user settings.
 {
 	// Place your settings in this file to overwrite default and user settings.
-	"editor.formatOnSave": true, // Switch for lint error fix
+	"editor.formatOnSave": false, // Switch for lint error fix
 	"editor.tabSize": 4,
 	"editor.renderIndentGuides": true,
 	"editor.renderWhitespace": "boundary",
